manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catweb
  template:
    metadata:
      labels:
        app: catweb
    spec:
      containers:
      - image: registry.gitlab.com/adess-demos/demo/app-team/catweb-gitops/main:24f2b3b9db21ccbab7b338ba0242d3fc44100253
        name: catweb
        ports:
        - containerPort: 5000
