manifests/image-pull-secrets-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catweb
  namespace: prod
spec:
  template:
    spec:
      imagePullSecrets:
      - name: gitlab-registry-credentials
