manifests/k8s-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: catweb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: catweb
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catweb
  template:
    metadata:
      labels:
        app: catweb
    spec:
      containers:
      - image: registry.gitlab.com/adess-demos/demo/app-team/catweb-gitops/main:24f2b3b9db21ccbab7b338ba0242d3fc44100253
        name: catweb
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: gitlab-registry-credentials
