manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catweb
spec:
  selector:
    app: catweb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
