manifests/catweb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catweb
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - prod.catweb.gitops.fun
    secretName: catweb-tls
  rules:
  - host: prod.catweb.gitops.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: catweb
            port:
              number: 80
