manifests/ingress-host-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catweb
spec:
  rules:
    - host: review-${CI_COMMIT_REF_SLUG}.catweb.gitops.fun
